--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chan.android_lab5.detail">
+    tools:context="com.chan.android_lab5.detail"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
